--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 [dependencies]
 object_store = { version = "0.9.0", features = ["aws"] }
-axum = { version = "0.7.4", features = ["multipart"] }
+axum = { version = "0.7.4", features = ["multipart","macros"] }
 tokio = { version = "1.36", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.1", features = ["trace"] }
@@ -26,3 +26,7 @@ serde_json = "1.0.113"
 tracing = "0.1.40"
 time = "0.3.34"
 tracing-subscriber = "0.3.18"
+subtle = "2.5.0"
+async-trait = "0.1.77"
+thiserror = "1.0.56"
+tower-sessions = "0.10.2"
